force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/leaseworks__Supplemental_Rent_Transactions__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Supplemental Rent Transaction</label>
    <nameField>
        <label>Supplemental Rent Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplemental Rent Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>