force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Amount_Accrued__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Accrued__c</fullName>
    <formula>CASE(TEXT(leaseworks__Transaction_Type__c)
,&apos;MR Accrued&apos;, IF(leaseworks__Utilization_Status__c==&apos;Approved By Lessor&apos;,  IF( AND( ISPICKVAL(  leaseworks__Supplemental_Rent_Utilization__r.leaseworks__Supplemental_Rent_Type__c  , &apos;End of Lease Adjustment&apos;) , ISPICKVAL( leaseworks__Supplemental_Rent_Utilization__r.leaseworks__Utilization_Report__r.leaseworks__Type__c , &apos;True Up Gross&apos;)) ,  leaseworks__Supplemental_Rent_Utilization__r.leaseworks__Effective_Difference__c , leaseworks__Supplemental_Rent_Utilization__r.leaseworks__Total_Maintenance_Reserve__c) , null)
,&apos;MR Claim Accrued&apos;, IF(leaseworks__Claim_Status__c==&apos;Approved&apos;, leaseworks__Claim_Amount__c, null)
,&apos;Adjustment&apos;,IF(leaseworks__Y_Hidden_Adjust_Accrued_Amount__c==true, leaseworks__Supplemental_Rent_Adjustment_Amount__c, null)
,leaseworks__Amount_Invoiced__c)</formula>
    <inlineHelpText>Auto-calculated field, showing accrued amount as per the source Document. This amount affects Running Balance (Accrued). NULL for  transactions updating only cash balance.</inlineHelpText>
    <label>Amount (Accrued)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>