force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Amount_Accrued_Sum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Accrued_Sum__c</fullName>
    <inlineHelpText>Auto-calculated field, showing accrued amount as per the source Document. This amount affects Running Balance (Accrued). NULL for  transactions updating only cash balance.</inlineHelpText>
    <label>_Amount (Accrued)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>