force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Amount_Invoiced_Sum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Invoiced_Sum__c</fullName>
    <label>_Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>