force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__AmtCC_Payout__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AmtCC_Payout__c</fullName>
    <description>The field is necessary to bypass the character limit issue in the formula fields mentioned above. Instead of using the full condition, we utilize this field solely to remain within the character limit</description>
    <formula>IF(TEXT(leaseworks__Transaction_Type__c)==&#39;MR Contribution Used&#39;,IF(ISBLANK(leaseworks__Event_Payout__c),0,IF(OR(ISPICKVAL(leaseworks__Event_Payout__r.leaseworks__Status__c, &#39;Approved&#39;),ISPICKVAL(leaseworks__Event_Payout__r.leaseworks__Status__c,&#39;Cancelled-Pending&#39;)),leaseworks__Payout_Line_Item__r.leaseworks__Payout_Line_Amount__c,0)),IF(CONTAINS(TEXT(leaseworks__Transaction_Type__c),&#39;MR Claim&#39;),IF(OR(ISPICKVAL(leaseworks__Event_Payout__r.leaseworks__Status__c,&#39;Approved&#39;),ISPICKVAL(leaseworks__Event_Payout__r.leaseworks__Status__c,&#39;Cancelled-Pending&#39;)),leaseworks__Event_Payout__r.leaseworks__Payout_Amount__c * (-1),0),IF(OR(TEXT(leaseworks__Transaction_Type__c)==&#39;MR Rebate Payout&#39;,TEXT(leaseworks__Transaction_Type__c)==&#39;MR Manual Payout&#39;,TEXT(leaseworks__Transaction_Type__c)==&#39;Payout - MR Reconciliation&#39;),IF(OR(ISPICKVAL(leaseworks__Event_Payout__r.leaseworks__Status__c,&#39;Approved&#39;),ISPICKVAL(leaseworks__Event_Payout__r.leaseworks__Status__c,&#39;Cancelled-Pending&#39;)),leaseworks__Payout_Line_Item__r.leaseworks__Payout_Line_Amount__c *(-1),null),null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Amount CC Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>