force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__AmtCC_Py__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AmtCC_Py__c</fullName>
    <formula>IF(Text(leaseworks__Transaction_Type__c)==&apos;MR Rebate&apos;,IF(OR(ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Pending&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Declined&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Cancelled&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Submitted&apos;)),null,leaseworks__Payable_Line_Item__r.leaseworks__Payable_Line_Amount__c* (-1)),IF(Text(leaseworks__Transaction_Type__c)==&apos;Payable - MR Reconciliation&apos;,IF(OR(ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Pending&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Declined&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Cancelled&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Submitted&apos;)),null,leaseworks__Payable_Line_Item__r.leaseworks__Payable_Line_Amount__c* (-1)),IF(Text(leaseworks__Transaction_Type__c)==&apos;MR Manual Payable&apos;,IF(OR(ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Pending&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Declined&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Cancelled&apos;),ISPICKVAL(leaseworks__Event_Payable__r.leaseworks__Status__c,&apos;Submitted&apos;)),null,leaseworks__Payable_Line_Item__r.leaseworks__Payable_Line_Amount__c* (-1)),null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Amount CC Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>