force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Assembly_MR_Fund_Transfer_Source__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_MR_Fund_Transfer_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field was created as a workaround due to Cross-Object References limitation. The value here is updated via backend code on each transaction updated and once a day as a scheduled job</description>
    <label>_Assembly MR Fund Transfer Source</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions ({Assembly MR Fund Transfer Source})</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>