force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Claim_Date__c</fullName>
    <label>_Claim Date</label>
    <type>Date</type>
</CustomField>