force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Credit_Memo_Issuance_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Memo_Issuance_Amount__c</fullName>
    <description>This field was created as a workaround due to Cross-Object References limitation. The value here is updated via backend code on each transaction updated and once a day as a scheduled job</description>
    <label>_Credit Memo Issuance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>