force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Event_Payout__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Payout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Link to Payout</label>
    <referenceTo>leaseworks__Payout__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>