force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Fund_Code_Lkp__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fund_Code_Lkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup  field populating Fund Code as set on the Supplemental Rent page, and updated accordingly when Fund code is updated on the Supplemental Rent page</description>
    <inlineHelpText>Auto-calculated field, showing a Fund Code associated with this Supplemental Rent fund. May be used for the reporting purposes showing all transactions of the Fund for all Leases</inlineHelpText>
    <label>Fund Code</label>
    <referenceTo>leaseworks__Fund_Code__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>