force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Invoice_Adjustment_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Adjustment_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Invoice Adjustment Line Item</label>
    <referenceTo>leaseworks__Invoice_Adjustment_Line_Item__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>