force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__MR_Fund_Transfer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Fund_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Link To MR Fund Transfer</label>
    <referenceTo>leaseworks__MR_Fund_Transfer__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>