force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Parent_SRT__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Parent_SRT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a Parent SRT to its Sub-fund SRTs.</description>
    <inlineHelpText>Shows the Parent transaction that this Sub-fund transaction belongs to.</inlineHelpText>
    <label>Parent SRT</label>
    <referenceTo>leaseworks__Supplemental_Rent_Transactions__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions (Parent SRT)</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>