force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Previous_Transaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_PreviousTransaction</label>
    <referenceTo>leaseworks__Supplemental_Rent_Transactions__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>