force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__RecordId__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RecordId__c</fullName>
    <description>This field is used to identify the failed records in batch</description>
    <label>_Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>