force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Running_Balance_Cash_Collected__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Running_Balance_Cash_Collected__c</fullName>
    <description>Non editable field showing sum of all previous (per sequence) transactions Amount (Cash) values</description>
    <formula>leaseworks__Running_Balance_Cash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated field, showing a sum of all previous Amount (Cash) values resulting in cash balance as of the Transaction Date</inlineHelpText>
    <label>Running Balance (Cash Collected)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>