force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sequence_Number__c</fullName>
    <inlineHelpText>Auto-calculated field, providing a sequential number for the transaction, basing on Transaction Dates</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>