force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__SRAT__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SRAT__c</fullName>
    <description>This hidden field is used to nullify the &quot;Amount (Invoice)&quot; and &quot;Amount (Cash Collected)&quot; fields when a Supplemental Rent Adjustment record is created with the SR Type set to &quot;EOLA.&quot; The field is necessary to bypass the character limit issue in the formula fields mentioned above. Instead of using the full condition, we utilize this field solely to remain within the character limit.</description>
    <formula>leaseworks__Supplemental_Rent_Adjustment_Amount__c</formula>
    <label>_SRAT</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>