force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Supplemental_Rent_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a new object created to record manual adjustment of the Maintenance Reserve fund. User can use this object to manually record adjustments of the fund</description>
    <label>_Supplemental Rent Adjustment</label>
    <referenceTo>leaseworks__Supplemental_Rent_Adjustment__c</referenceTo>
    <relationshipLabel>Supplemental Rent Transactions</relationshipLabel>
    <relationshipName>Supplemental_Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>