force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Supplemental_Rent_Adjustment_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent_Adjustment_Name__c</fullName>
    <description>This field was created as a workaround due to Cross-Object References limitation. The value here is updated via backend code on each transaction updated and once a day as a scheduled job</description>
    <label>_Supplemental Rent Adjustment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>