force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Supplemental_Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent_Type__c</fullName>
    <description>This field auto copies the value from Supplemental Rent Type field..</description>
    <formula>TEXT(leaseworks__Supplemental_Rent__r.leaseworks__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field auto copies the value from Supplemental Rent Type field..</inlineHelpText>
    <label>Z_unused_2409_Supplemental Rent Type</label>
    <type>Text</type>
</CustomField>