force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Transaction_Date_Min__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Date_Min__c</fullName>
    <label>_Transaction Date Min</label>
    <type>Date</type>
</CustomField>