force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization__c</fullName>
    <description>This field is used only on the page layout. Replaced it with Utilization lookup field</description>
    <formula>&#39;&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated field with a link to the Utilization record associated to this transaction (if applicable)</inlineHelpText>
    <label>Z_Unused_2106 Utilization</label>
    <type>Text</type>
</CustomField>