force-app/main/default/objects/leaseworks__Supplemental_Rent_Transactions__c/fields/leaseworks__Y_Hidden_Adjust_Accrued_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Adjust_Accrued_Amount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>_Adjust Accrued Amount</label>
    <type>Checkbox</type>
</CustomField>